--- a/assets/index.html
+++ b/assets/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VM Cricket tournament</title>
+    <title>DY PATIL Cricket tournament</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -17,14 +17,14 @@
     <nav class="navbar bg-body-tertiary">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/images/vereigen_logo.png" alt="Bootstrap" width="150px" height="auto">
+                <img src="assets/images/dyp-logo.png" alt="Bootstrap" width="150px" height="auto">
             </a>
         </div>
     </nav>
 
     <div class="row wrapper wrapperone">
         <div class="col-md-8 hero-bg">
-            <img src="assets/images/vereigen_logo.png" alt="Vereigen Logo">
+            <img src="assets/images/dyp-logo.png" alt="DYP Logo">
         </div>
         <div class="col-md-4 main-form-section pt-5">
             
